<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- DatatransferApp -->
    <string name="app_name">DatatransferApp</string>
    <string name="DTA">DatatransferApp</string>
    <string name="serverLabel">TISCH Server Adresse</string>
    <string name="portLabel">TISCH Server Port</string>
    <string name="buttonConnect">Verbinden</string>
    <string name="serverValue">192.168.102.198</string>
    <string name="serverHint">server IP</string>
    <string name="portValue">8080</string>
    <string name="portHint">default port is 8080</string>
    <string name="Logo">Logo</string>
    <string name="Server1">102.196</string>
    <string name="Server2">102.174</string>

    <!-- TcpClient Service -->
    <string name="tcpServiceStarted">Service started</string>
    <string name="local_service_stopped">Service stopped</string>

    <!-- ShowMarker -->
    <string name="showMarker">display Marker</string>

    <!-- ShowExchangeMenu -->
    <string name="showExchangeMenu">Exchange Menu</string>
    <string name="imgContentDescription">Bild</string>
    <string name="selectImage">select Image</string>
    <string name="sendImage">send Image</string>
    <string name="selectedImage">your image</string>
    <string name="buttonClose">Quit</string>

</resources>