<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/DTA"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="230dp"
        android:layout_height="133dp"
        android:layout_gravity="center"
        android:contentDescription="@string/Logo"
        android:src="@drawable/farlogo_black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="25dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serverLabel" />

        <EditText
            android:id="@+id/ipAddress"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_vertical|right"
            android:hint="@string/serverHint"
            android:lines="1"
            android:singleLine="true"
            android:text="@string/serverValue" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portLabel" />

        <EditText
            android:id="@+id/port"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_vertical|right"
            android:hint="@string/portHint"
            android:lines="1"
            android:singleLine="true"
            android:text="@string/portValue" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

        <Button
            android:id="@+id/Server1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Server1"
            android:visibility="visible" />

        <Button
            android:id="@+id/Server2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Server2"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonConnect" />

    </LinearLayout>

</LinearLayout>