<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/showExchangeMenu"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/selectedImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/selectedImage"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/buttonClose" />

        <Button
            android:id="@+id/selectImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/selectImage" />

        <Button
            android:id="@+id/sendImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/sendImage" />

    </LinearLayout>

</LinearLayout>